<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.Material3.Light.NoActionBar"
    tools:context=".schoollist.SchoolListFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_text_layout"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_margin="@dimen/margin_small"
        android:hint="@string/search_term"
        app:layout_constraintEnd_toStartOf="@id/clear_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/clear_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/search_text_layout"
        app:layout_constraintTop_toTopOf="@id/search_text_layout" />

    <TextView
        android:id="@+id/list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/school_list_label"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_text_layout" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:elevation="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/school_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/school_list_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_label" />

</androidx.constraintlayout.widget.ConstraintLayout>